# clinical-rag-hallucination

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: settings.yaml
config/prompts/: extraction_system.txt  extraction_user.txt  grounding.txt
data/sample/: ae_narrative_001.txt  ae_narrative_002.txt  gold_standard.json  lab_report_001.txt
scripts/: demo_extraction.py  evaluate.py  index_knowledge_base.py
src/: __init__.py  config.py  main.py
src/confidence/: __init__.py  abstention.py  estimator.py
src/evaluation/: __init__.py  metrics.py
src/generation/: __init__.py  constrained.py  llm_client.py
src/grounding/: __init__.py  nli_verifier.py  span_finder.py
src/ingestion/: __init__.py  chunker.py  parser.py
src/ontologies/: __init__.py  loinc.py  meddra.py
src/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  hybrid.py  reranker.py
src/schemas/: __init__.py  extraction.py  sdtm.py
tests/: __init__.py  test_confidence.py  test_config.py  test_evaluation.py  test_ingestion.py  test_ontologies.py  test_retrieval.py  test_schemas.py
